Switch app platform to spaces instead

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -247,7 +247,7 @@
         <div class="chat-messages" id="chatMessages">
             <div class="message system">
                 <div class="message-content">
-                    Welcome! I can help you generate static websites, containerize them, and deploy to DigitalOcean. What would you like to create?
+                    Welcome! I can help you generate static websites, containerize them, and deploy to DigitalOcean Spaces. What would you like to create?
                 </div>
             </div>
             <div class="suggestions">
