Fix URL handling in index.html: Strip trailing punctuation from links to ensure proper href functionality in message formatting.

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -362,7 +362,9 @@
             const urlRegex = /(https?:\/\/[^\s<>"\']+)/g;
             const urls = [];
             const withPlaceholders = text.replace(urlRegex, (url) => {
-                urls.push(url);
+                // Strip trailing sentence punctuation so the link href works (e.g. "https://...index.html." -> "https://...index.html")
+                const cleanUrl = url.replace(/[.,;:!?]+$/, '');
+                urls.push(cleanUrl);
                 return '\u0001URL' + (urls.length - 1) + '\u0001';
             });
             const escaped = escapeHtml(withPlaceholders);
